--- a/views/home.html
+++ b/views/home.html
@@ -43,10 +43,8 @@
     <section class="banner">
             <img src="images/img-home-banner.jpg" alt="banner">
     </section>
+    <h1> Basado en tu última visita</h1>
     <section class='ultima-visita'>
-        <section>
-            <h1> Basado en tu última visita</h1>
-        </section>
         <article class="products">
             <div class="main-articulos"> 
                 <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="img-cafetera">
@@ -84,8 +82,8 @@
             </div>
         </article>
     </section>
+    <h1> Seccion de ofertas</h1>
     <section class='Ofertas'>
-            <h1> Seccion de ofertas</h1>
             <article class="products">
                 <div class="main-articulos">
                     <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="img-cafetera"></img>
@@ -96,7 +94,7 @@
                 </div>
             </article>
             <article class="products">
-                <div class="articulos">
+                <div class="main-articulos">
                     <img src="images/img-macbook-pro-2019.jpg" alt="MacBook" class="img-macbook"></img>
                     <i class="fas fa-truck"></i>
                     <p class="precio"> $230.000</p>
@@ -134,16 +132,13 @@
                         <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
                     </article>
                 </div>
-
                 <div class="col-12 col-md-4">
                     <article class="footer">
                         <i class="fas fa-gift"></i>
                         <h2>Envío gratis desde $ 1.999</h2>
                         <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
                     </article>
-
                 </div>
-
                 <div class="col-12 col-md-4">
                     <article class="footer">
                         <i class="fas fa-user-shield"></i>
