--- a/views/login.html
+++ b/views/login.html
@@ -58,34 +58,28 @@
                 </div>
         </form>
     </main>
-    <footer>
+    <footer class="main-footer">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-4">
                     <article class="footer">
                         <i class="fas fa-credit-card"></i>
                         <h2>Pagá con tarjeta o en efectivo</h2>
-                        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre
-                        es seguro!</p>
+                        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
                     </article>
                 </div>
-
                 <div class="col-12 col-md-4">
                     <article class="footer">
                         <i class="fas fa-gift"></i>
                         <h2>Envío gratis desde $ 1.999</h2>
-                        <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio
-                            de Mercado Puntos.</p>
+                        <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
                     </article>
-
                 </div>
-
                 <div class="col-12 col-md-4">
                     <article class="footer">
                         <i class="fas fa-user-shield"></i>
                         <h2>Seguridad, de principio a fin</h2>
-                        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre
-                            protegido.</p>
+                        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
                     </article>
                 </div>
             </div>
@@ -96,6 +90,5 @@
             </div>
         </div>
     </footer>
-
 </body>
 </html>
